# polymarket-position-watcher

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh.md  pyproject.toml  setup.py
examples/: example.py  http_bootstrap_example.py
poly_position_watcher/: __init__.py  _version.py  api_worker.py  position_service.py  trade_calculator.py  wss_worker.py
poly_position_watcher/common/: __init__.py  enums.py  logger.py
poly_position_watcher/schema/: __init__.py  base.py  common_model.py  position_model.py
tests/: test_http_fallback_manager.py  test_position_model.py  test_trade_calculator.py
