[project]
name = "poly-position-watcher"
version = "0.2.0"
description = "polymarket proxy wallet redeem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "py-clob-client>=0.25.0",
    "websocket-client>=1.8.0",
]
[format]
line-length = 120

[project.urls]
"Homepage" = "https://github.com/tosmart01/polymarket-position-watcher"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
